--- a/style.css
+++ b/style.css
@@ -11,29 +11,52 @@ H1{
     text-align: center;
    
    }
+   
 
+  
    table{
   
     text-align: center;
-    width: 100%;
     border: 1px solid whitesmoke;
-    border-collapse: collapse;
-
-    
+    width: 100%;
+    border-collapse: collapse;       
    }
+   table.actionbar{
+    
+    text-align: center;
+    border: 0px  white;
+    width: 10%;
+    border-collapse: collapse; 
+    margin:16px;
+
+   }
+ 
    th{
        background:lightgray;
        
    }
-   tbody{
-    border-bottom:1px solid lightgray;
+   th.actionbar{
+   background: white;
+    
+}
+tbody{
+    border-bottom:1px solid white;
+    
 
+   }
+   tbody.actionbar{
+    border-bottom:0px solid white;
    }
    tr{
 
    border-bottom:1px solid lightgray;
 
    }
+   tr.actionbar{
+
+    border-bottom:0px solid white;
+ 
+    }
 
 
 .headerrow{
@@ -199,7 +222,7 @@ flex-direction: row;
     left:0;
     top: 0;
     width: 100%; /* Full width */
-    height: 100%; /* Full height */
+    height: 80%; /* Full height */
     overflow-y: auto; /* Enable scroll if needed */
     background-color: rgb(0,0,0); /* Fallback color */
     background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
@@ -231,8 +254,9 @@ flex-direction: row;
     font-weight: bold;
 
 }
-.actionbar{
-
+.actionbarr{
+     float: left;
+     display: inline;
     margin:16px;
     padding: 8px;
 
